--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Merlin Streaming – Episode 1</title>
+  <title>Merlin Streaming – MP4 Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -23,15 +23,21 @@
       border: 2px solid #444;
       border-radius: 8px;
     }
+    p {
+      text-align: center;
+      color: #aaa;
+    }
   </style>
 </head>
 <body>
-  <h1>Merlin – S01E01: The Dragon's Call</h1>
-  <p>Streaming from Pixeldrain</p>
+  <h1>🔧 Test Video: MP4 Playback</h1>
+  <p>This is a test to check if HTML5 video works in your browser.</p>
 
   <video controls>
-    <source src="https://pixeldrain.com/api/file/TdJjvpNT" type="video/mp4">
+    <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
+  <p>If this video plays correctly, your browser supports embedded MP4 playback.</p>
 </body>
 </html>
